--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-SQLAlchemy~=2.0.25
+SQLAlchemy~=1.4.51
 fastapi~=0.109.0
 psycopg2~=2.9.9
 pydantic~=2.6.0
 python-dotenv~=1.0.1
 alembic~=1.13.1
+databases~=0.8.0
