--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-SQLAlchemy~=1.4.51
-fastapi~=0.109.0
 psycopg2~=2.9.9
-pydantic~=2.6.0
 python-dotenv~=1.0.1
 alembic~=1.13.1
 databases~=0.8.0
-uvicorn==0.27.0.post1
 asyncpg==0.29.0
+fastapi~=0.109.2
+envparse~=0.2.0
+SQLAlchemy~=2.0.25
+uvicorn~=0.27.0.post1
+pydantic~=2.6.0
