--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DB_HOST = localhost
-DB_PORT = 5432
-DB_USER = postgres
-DB_PASS = 919
+DB_PORT = 5433
+DB_USER = fast_api
+DB_PASS = pgpwd4habr
 DB_NAME = fast_api
