--- a/alembic.ini
+++ b/alembic.ini
@@ -60,7 +60,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://postgres:919@localhost:5432/fast_api
+sqlalchemy.url = postgresql://fast_api:pgpwd4habr@localhost:5433/fast_api
 
 
 [post_write_hooks]
