--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,9 @@
-SQLAlchemy==2.0.25
-alembic==1.13.1
-annotated-types==0.6.0
-anyio==4.2.0
-async-timeout==4.0.3
-asyncpg==0.29.0
-click==8.1.7
-databases==0.8.0
-dnspython==2.5.0
-email-validator==2.1.0.post1
-envparse==0.2.0
-fastapi==0.109.2
-greenlet==3.0.3
-h11==0.14.0
-idna==3.6
-iniconfig==2.0.0
-Mako==1.3.2
-MarkupSafe==2.1.5
-packaging==23.2
-pika==1.3.2
-pluggy==1.4.0
-psycopg2==2.9.9
-pydantic==2.6.1
-pydantic_core==2.16.2
-pytest==8.0.1
-python-dotenv==1.0.1
-sniffio==1.3.0
-starlette==0.36.3
-typing_extensions==4.9.0
-uvicorn==0.27.0.post1
+SQLAlchemy~=2.0.27
+fastapi~=0.109.2
+pydantic~=2.6.1
+uvicorn~=0.27.1
+pika~=1.3.2
+python-dotenv~=1.0.1
+envparse~=0.2.0
+alembic~=1.13.1
+psycopg2~=2.9.9
