feat: Adding tests.

--- a/.env
+++ b/.env
@@ -1,5 +1,10 @@
-DB_HOST = postgre_db
+DB_HOST = localhost
 DB_PORT = 5433
 DB_USER = fast_api
 DB_PASS = pgpwd4habr
 DB_NAME = fast_api
+TEST_DB_HOST = localhost
+TEST_DB_PORT = 5433
+TEST_DB_USER = fast_api
+TEST_DB_PASS = pgpwd4habr
+TEST_DB_NAME = test_fast_api
