--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-DB_HOST = localhost
+DB_HOST = postgre_db
 DB_PORT = 5433
 DB_USER = fast_api
 DB_PASS = pgpwd4habr
 DB_NAME = fast_api
-TEST_DB_HOST = localhost
+TEST_DB_HOST = test_postgre_db
 TEST_DB_PORT = 5433
 TEST_DB_USER = fast_api
 TEST_DB_PASS = pgpwd4habr
