--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,9 @@ python-dotenv~=1.0.1
 envparse~=0.2.0
 alembic~=1.13.1
 psycopg2~=2.9.9
+asyncpg~=0.29.0
+email-validator~=2.1.0.post1
+httpx~=0.27.0
+anyio~=4.3.0
+pytest~=8.0.1
+pytest-asyncio~=0.23.5
